--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -75,7 +75,7 @@ footer:
 canonical: true
 
 # Change headers hierarchy on site-subtitle (will be main site description) and on all post/pages titles for better SEO-optimization.
-seo: false
+seo: true
 
 # If true, will add site-subtitle to index page, added in main hexo config.
 # subtitle: Subtitle
@@ -149,7 +149,7 @@ links_title: 友情链接
 #links_layout: block
 #links_layout: inline
 links:
- github : https://github.com/Assasion
+ github : https://github.com/AfanSama
  liaojian : http://www.liaojian.top
 
 # Sidebar Avatar
@@ -406,7 +406,7 @@ gitment:
   count: true # Show comments count in post meta area
   lazy: false # Comments lazy loading with a button
   cleanly: false # Hide 'Powered by ...' on footer, and more
-  language: # Force language, or auto switch by theme
+  language: zh-Hans # Force language, or auto switch by theme
   github_user: # MUST HAVE, Your Github ID
   github_repo: # MUST HAVE, The repo you use to store Gitment comments
   client_id: # MUST HAVE, Github client id for the Gitment
@@ -489,7 +489,7 @@ duoshuo_info:
   ua_enable: true
   admin_enable: false
   user_id: 0
-  #admin_nickname: Author
+  admin_nickname: Afan
 
 # Post widgets & FB/VK comments settings.
 # ---------------------------------------------------------------
